add the accepted vldb demo

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -207,6 +207,20 @@ series = {DEBS '24},
 google_scholar_id={hqOjcs7Dif8C}
 }
 
+@article{styxdemo,
+  abbr = {VLDB},
+  tag = {Demo},
+  author       = {Kyriakos Psarakis and
+                  Oto Mraz and
+                  George Christodoulou and
+                  George Siachamis and
+                  Marios Fragkoulis and
+                  Asterios Katsifodimos},
+  title        = {Styx in Action: Transactional Cloud Applications Made Easy},
+  journal      = {Proc. {VLDB} Endow.},
+  year         = {2025}
+}
+
 @inproceedings{sigmodtutorial,
       abbr = {SIGMOD},
       tag = {Tutorial},
@@ -217,4 +231,6 @@ google_scholar_id={hqOjcs7Dif8C}
       author={Rodrigo Laigner and George Christodoulou and Kyriakos Psarakis and Asterios Katsifodimos and Yongluan Zhou},
       year={2025},
 }
+
+
 
