--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -150,7 +150,6 @@ series = {DEBS '23}
       archivePrefix={arXiv},
       google_scholar_id={3fE2CSJIrl8C},
       primaryClass={cs.DC},
-      blog={https://styx.run/}
 }
 
 
@@ -185,8 +184,7 @@ series = {DEBS '23}
   author={Psarakis, Kyriakos and Christodoulou, George and Fragkoulis, Marios and Katsifodimos, Asterios},
   pdf = {https://vldb.org/cidrdb/papers/2025/p25-psarakis.pdf},
   google_scholar_id={qxL8FJ1GzNcC},
-  year={2025},
-  blog={https://styx.run/}
+  year={2025}
 }
 
 @inproceedings{10.1145/3629104.3666036,
