add the tutorial website

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -228,6 +228,7 @@ google_scholar_id={hqOjcs7Dif8C}
       google_scholar_id={Wp0gIr-vW9MC},
       author={Rodrigo Laigner and George Christodoulou and Kyriakos Psarakis and Asterios Katsifodimos and Yongluan Zhou},
       year={2025},
+      blog={https://delftdata.github.io/tutorial-sigmod25/},
 }
 
 
