--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -148,7 +148,7 @@ series = {DEBS '23}
       year={2025},
       eprint={2312.06893},
       archivePrefix={arXiv},
-      google_scholar_id={3fE2CSJIrl8C},
+      google_scholar_id={mVmsd5A6BfQC},
       primaryClass={cs.DC},
 }
 
@@ -225,7 +225,7 @@ google_scholar_id={hqOjcs7Dif8C}
       title={Transactional Cloud Applications: Status Quo, Challenges, and Opportunities},
       booktitle={ACM Special Interest Group on Management of Data (SIGMOD)},
       pdf={https://arxiv.org/pdf/2504.17106},
-      google_scholar_id={Wp0gIr-vW9MC},
+      google_scholar_id={dhFuZR0502QC},
       author={Rodrigo Laigner and George Christodoulou and Kyriakos Psarakis and Asterios Katsifodimos and Yongluan Zhou},
       year={2025},
       blog={https://delftdata.github.io/tutorial-sigmod25/},
