add new CIDR paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -231,5 +231,10 @@ google_scholar_id={hqOjcs7Dif8C}
       blog={https://delftdata.github.io/tutorial-sigmod25/},
 }
 
-
-
+@inproceedings{arns2026event,
+  title={Event Horizon: Asymmetric Dependencies for Fast Geo-Distributed Operations},
+  abbr = {CIDR},
+  booktitle = {16th Annual Conference on Innovative Data Systems Research (CIDR)},
+  author={Arns, Jonathan and Ng, Harald and Psarakis, Kyriakos and Katsifodimos, Asterios and Carbone, Paris},
+  year={2026}
+}
