attempt to add global citation metrics

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -214,6 +214,8 @@ google_scholar_id={hqOjcs7Dif8C}
                   George Siachamis and
                   Marios Fragkoulis and
                   Asterios Katsifodimos},
+                  pdf = {https://www.vldb.org/pvldb/vol18/p5275-psarakis.pdf},
+                  google_scholar_id = {L8Ckcad2t8MC},
   title        = {Styx in Action: Transactional Cloud Applications Made Easy},
   journal      = {Proc. {VLDB} Endow.},
   year         = {2025}
@@ -224,7 +226,7 @@ google_scholar_id={hqOjcs7Dif8C}
       tag = {Tutorial},
       title={Transactional Cloud Applications: Status Quo, Challenges, and Opportunities},
       booktitle={ACM Special Interest Group on Management of Data (SIGMOD)},
-      pdf={https://arxiv.org/pdf/2504.17106},
+      pdf={https://dl.acm.org/doi/pdf/10.1145/3722212.3725635},
       google_scholar_id={dhFuZR0502QC},
       author={Rodrigo Laigner and George Christodoulou and Kyriakos Psarakis and Asterios Katsifodimos and Yongluan Zhou},
       year={2025},
