--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -240,3 +240,13 @@ google_scholar_id={hqOjcs7Dif8C}
   author={Arns, Jonathan and Ng, Harald and Psarakis, Kyriakos and Katsifodimos, Asterios and Carbone, Paris},
   year={2026}
 }
+
+
+@inproceedings{phdthesis,
+    title= {Democratizing Scalable Cloud Applications: Transactional Stateful Functions on Streaming Dataflows},
+    abbr={PhD Thesis},
+    author={Kyriakos Psarakis},
+    year={2026},
+    pdf={https://repository.tudelft.nl/file/File_fe37c65e-5869-4ba5-bfbc-d5e048204e65?preview=1},
+    google_scholar_id={IWHjjKOFINEC}
+}
