Add PDF link for CIDR 2026 paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -238,6 +238,7 @@ google_scholar_id={hqOjcs7Dif8C}
   abbr = {CIDR},
   booktitle = {16th Annual Conference on Innovative Data Systems Research (CIDR)},
   author={Arns, Jonathan and Ng, Harald and Psarakis, Kyriakos and Katsifodimos, Asterios and Carbone, Paris},
+pdf={https://vldb.org/cidrdb/papers/2026/p20-arns.pdf},
   year={2026}
 }
 
