--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -53,6 +53,7 @@ journal = {Proc. VLDB Endow.},
 month = {oct},
 pages = {2871–2874},
       google_scholar_id={2osOgNQ5qMEC},
+      video={https://youtu.be/EOwD-kHuAkI},
 numpages = {4}
 }
 
@@ -218,6 +219,7 @@ google_scholar_id={hqOjcs7Dif8C}
                   google_scholar_id = {L8Ckcad2t8MC},
   title        = {Styx in Action: Transactional Cloud Applications Made Easy},
   journal      = {Proc. {VLDB} Endow.},
+  video={https://youtu.be/h72DwVZNf1E},
   year         = {2025}
 }
 
@@ -237,6 +239,8 @@ google_scholar_id={hqOjcs7Dif8C}
   title={Event Horizon: Asymmetric Dependencies for Fast Geo-Distributed Operations},
   abbr = {CIDR},
   booktitle = {16th Annual Conference on Innovative Data Systems Research (CIDR)},
+  pdf={https://www.vldb.org/cidrdb/papers/2026/p20-arns.pdf},
+  google_scholar_id={f6ydRqryjwC},
   author={Arns, Jonathan and Ng, Harald and Psarakis, Kyriakos and Katsifodimos, Asterios and Carbone, Paris},
 pdf={https://vldb.org/cidrdb/papers/2026/p20-arns.pdf},
   year={2026}
@@ -246,8 +250,10 @@ pdf={https://vldb.org/cidrdb/papers/2026/p20-arns.pdf},
 @inproceedings{phdthesis,
     title= {Democratizing Scalable Cloud Applications: Transactional Stateful Functions on Streaming Dataflows},
     abbr={PhD Thesis},
+    tag = {🏆 Cum laude},
     author={Kyriakos Psarakis},
     year={2026},
     pdf={https://repository.tudelft.nl/file/File_fe37c65e-5869-4ba5-bfbc-d5e048204e65?preview=1},
+    video={https://youtu.be/j8m-NSxLbX4},
     google_scholar_id={IWHjjKOFINEC}
 }
